--- a/BuddyBot/packages.config
+++ b/BuddyBot/packages.config
@@ -10,10 +10,10 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Bot.Builder" version="3.16.1.38846" targetFramework="net461" />
-  <package id="Microsoft.Bot.Builder.Azure" version="3.2.5" targetFramework="net461" />
+  <package id="Microsoft.Bot.Builder" version="3.19.1.44133" targetFramework="net461" />
+  <package id="Microsoft.Bot.Builder.Azure" version="3.16.3.40383" targetFramework="net461" />
   <package id="Microsoft.Bot.Builder.History" version="3.16.1.38846" targetFramework="net461" />
-  <package id="Microsoft.Bot.Connector" version="3.16.1.38846" targetFramework="net461" />
+  <package id="Microsoft.Bot.Connector" version="3.19.1.44133" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net461" />
   <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net461" />
@@ -38,6 +38,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="4.4.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.2.2" targetFramework="net461" />
