--- a/BuddyBot/packages.config
+++ b/BuddyBot/packages.config
@@ -1,70 +1,95 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.8.0" targetFramework="net461" />
-  <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net461" />
+  <package id="Autofac" version="4.8.1" targetFramework="net461" />
+  <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net461" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net461" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net461" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.Bot.Builder" version="3.19.1.44133" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.Azure.DocumentDB" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.Azure.DocumentDB.Core" version="2.2.2" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.3" targetFramework="net461" />
+  <package id="Microsoft.Bot.Builder" version="3.20.1" targetFramework="net461" />
   <package id="Microsoft.Bot.Builder.Azure" version="3.16.3.40383" targetFramework="net461" />
-  <package id="Microsoft.Bot.Builder.History" version="3.16.1.38846" targetFramework="net461" />
-  <package id="Microsoft.Bot.Connector" version="3.19.1.44133" targetFramework="net461" />
+  <package id="Microsoft.Bot.Builder.History" version="3.20.1" targetFramework="net461" />
+  <package id="Microsoft.Bot.Connector" version="3.20.1" targetFramework="net461" />
+  <package id="Microsoft.Bot.Schema" version="4.2.2" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net461" />
   <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="4.4.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="4.5.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Protocols" version="5.2.2" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.2.2" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.2.2" targetFramework="net461" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.19" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
-  <package id="Serilog" version="2.7.1" targetFramework="net461" />
+  <package id="Serilog" version="2.8.0" targetFramework="net461" />
   <package id="Serilog.Sinks.AzureTableStorage" version="4.0.0" targetFramework="net461" />
-  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.0" targetFramework="net461" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.1.1" targetFramework="net461" />
+  <package id="SourceLink.Create.CommandLine" version="2.8.3" targetFramework="net461" developmentDependency="true" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
+  <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
-  <package id="System.Data.SqlClient" version="4.5.1" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.2" targetFramework="net461" />
-  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.6.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
+  <package id="System.Diagnostics.TraceSource" version="4.3.0" targetFramework="net461" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
+  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net461" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Net.Http.WinHttpHandler" version="4.5.2" targetFramework="net461" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="net461" />
+  <package id="System.Net.WebHeaderCollection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net461" />
-  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net461" />
+  <package id="System.Security.SecureString" version="4.3.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.8.4" targetFramework="net461" />
-  <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net461" />
 </packages>
