--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -361,7 +361,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="src\default.htm" />
+    <Content Include="default.htm" />
     <Content Include="Global.asax" />
     <Content Include="src\site.css" />
     <Content Include="Web.config">
