--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -364,7 +364,7 @@
     <Content Include="default.htm" />
     <Content Include="Global.asax" />
     <Content Include="src\buddybot_icon.ico" />
-    <Content Include="src\images\BuddyBotSlim.svg" />
+    <Content Include="src\images\BuddyBotAvatar.svg" />
     <Content Include="src\site.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
