--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -361,8 +361,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="src\default.htm" />
+    <Content Include="default.htm" />
     <Content Include="Global.asax" />
+    <Content Include="src\images\BuddyBotSlim.svg" />
     <Content Include="src\site.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
