--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -365,6 +365,7 @@
     <Content Include="Global.asax" />
     <Content Include="src\buddybot_icon.ico" />
     <Content Include="src\images\BuddyBotAvatar.svg" />
+    <Content Include="src\images\GitHubLogo.svg" />
     <Content Include="src\site.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
