--- a/BuddyBot/BuddyBot.csproj
+++ b/BuddyBot/BuddyBot.csproj
@@ -366,6 +366,7 @@
     <Content Include="src\buddybot_icon.ico" />
     <Content Include="src\images\BuddyBotAvatar.svg" />
     <Content Include="src\images\GitHubLogo.svg" />
+    <Content Include="src\js\webChat.js" />
     <Content Include="src\site.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
